--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,5 +1,6 @@
 .hero{
   height: 100%;
-  background-position: center;
-  
+  border-radius: 10px;
+  background-color: #c5b6b6;
+  overflow: hidden;
 }
