--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -70,10 +70,80 @@
   align-items: center;
   border-bottom: 1px solid white;
   justify-content: center;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .search input{
-  height: 40px;
+  height: 70%;
   border-radius: 5px;
   border: none;
   padding-left: 10px;
+  width: 100%;
+}
+
+.header-home{
+  height: 15%;
+  border-bottom: 1px solid black;
+}
+
+.csm-button{
+  height: fit-content;
+}
+
+.text{
+  height: fit-content;
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.Navbar-Dash{
+  background-color: rgb(141, 165, 175);
+}
+
+.icon{
+  font-size: 1.5rem;
+  background-color: rgba(0, 0, 0, .2);
+  height: fit-content;
+  padding: 0px;
+  margin: 0px;
+}
+
+.filter-text-1{
+  font-style: italic;
+  border-left: 1px solid white;
+  height: 20px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.filter{
+  background-color: #ddd;
+  height: fit-content;
+  padding: 0px;
+  width: fit-content;
+}
+
+.efficiency-card{
+  height: 100px;
+  width: 100px;
+  display: flex;
+}
+
+.efficiency-card h3{
+  height: fit-content;
+  margin: 0;
+}
+
+.efficiency-card p{
+  margin: 0;
+}
+
+.efficiency{
+  border-bottom: 1px solid rgb(187, 182, 182);
+}
+
+.titles{
+  font-size: .8rem;
+  font-weight: 600;
 }
