--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -94,6 +94,7 @@
   height: fit-content;
   font-size: 1.5rem;
   font-weight: bold;
+  color: #00ADB5;
   font-family: 'Times New Roman', Times, serif;
 }
 
@@ -143,13 +144,6 @@
 
 .efficiency{
   border-bottom: 1px solid rgb(187, 182, 182);
-}
-
-.titles{
-  font-size: .8rem;
-  font-weight: 600;
-  z-index: 10;
-
 }
 
 .bug-name{
