--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -1,7 +1,19 @@
+/* Main dashboard home */
+.dash-home{
+  background: #393E46;
+}
+
+
+/* Dashboard Navigation area */
+
+.Navbar-Dash{
+  background-color: #475466;
+  color: #EEEEEE;
+}
+
 .nav-buttons p{
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: 700;
-  /* width: 80%; */
 }
 
 .header-dashboard{
@@ -31,11 +43,15 @@
   display: flex;
   align-items: center;
   padding: 10px 5px;
-  /* justify-content: space
-  -around; */
   font-family: 'Times New Roman', Times, serif;
 }
 
+.nav-buttons:hover{
+  background-color: rgb(71, 165, 42);
+  border-bottom-left-radius: 9px;
+  border-top-left-radius: 9px;
+  color: whitesmoke;
+}
 .span3{
   padding-right: 10px;
 }
@@ -49,11 +65,6 @@
   
 }
 
-.titles{
-  color: #FC5185;
-  font-weight: bold;
-}
-
 .span1{
   background-color: black;
 }
@@ -61,13 +72,7 @@
 .span2{
   background-color: rgb(97, 180, 180);
 }
-
-.nav-buttons:hover{
-  background-color: rgb(71, 165, 42);
-  border-bottom-left-radius: 9px;
-  border-top-left-radius: 9px;
-  color: whitesmoke;
-}
+/* Navigation Seach area */
 
 .search{
   height: 15%;
@@ -88,7 +93,7 @@
   background-color: rgba(77, 72, 72, 0.4);
 }
 
-
+/* Dahbord Hero or Home section // main area */
 
 .header-home{
   height: 15%;
@@ -110,11 +115,7 @@
   font-family: 'Times New Roman', Times, serif;
 }
 
-.Navbar-Dash{
-  background-color: #475466;
-  color: #EEEEEE;
-  /* border-bottom: 1px solid white; */
-}
+
 
 .icon{
   font-size: 1.5rem;
@@ -124,21 +125,12 @@
   margin: 0px;
 }
 
-.filter-text-1{
-  font-style: italic;
-  border-left: 1px solid white;
-  height: 20px;
-  margin: 0px;
-  padding: 0px;
+.titles{
+  color: #FC5185;
+  font-weight: bold;
 }
 
-.filter{
-  background-color: #ddd;
-  height: fit-content;
-  padding: 0px;
-  width: fit-content;
-}
-
+/* Efficiency cards efficiciency-card.js */
 .efficiency-card{
   height: 100px;
   width: 100px;
@@ -154,7 +146,31 @@
   margin: 0;
 }
 
+/* Main component for bug content BugPage.js */
+.bug-title{
+  font-weight: 800;
+  font-size: .7rem;
+  color: #EEEEEE;
+}
 
+.none{
+  display: none;
+}
+
+.block{
+  display: block;
+}
+
+.bugs{
+  overflow-y: auto;
+  height: 60vh;
+}
+
+/* Bug card styling BugCard.js */
+.bug-card{
+  background-color: #222831;
+  color: white;
+}
 
 .bug-name{
   font-size: .8rem;
@@ -167,38 +183,7 @@
   font-weight: 600;
 }
 
-.bug-title{
-  font-weight: 800;
-  font-size: .7rem;
-  color: #EEEEEE;
-}
 
-.bugs{
-  overflow-y: auto;
-  height: 60vh;
-}
-
-.none{
-  display: none;
-}
-
-.block{
-  display: block;
-}
-
-.bug-btn{
+.date, .due, .bug-btn{
   font-size: .8rem;
-}
-
-.date, .due{
-  font-size: .8rem;
-}
-
-.dash-home{
-  background: #393E46;
-}
-
-.bug-card{
-  background-color: #222831;
-  color: white;
 }
