--- a/src/components/issues/issue.css
+++ b/src/components/issues/issue.css
@@ -3,8 +3,11 @@
   background-color: rgba(0, 0, 0, .6);
   height: 15%;
   justify-content: center;
-  padding-top: 2%;
+  padding-top: 3%;
   padding-left: 30px;
+  /* font-size: .8rem; */
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-weight: bold;
 }
 
 .span-issue{
@@ -13,5 +16,5 @@
 
 .back-btn{
   float: right;
-  margin-right: 20px;
+  margin-right: 50px;
 }
