st: layout on issue page to center items

--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -115,6 +115,14 @@
   font-family: 'Times New Roman', Times, serif;
 }
 
+a{
+  text-decoration: none;
+  list-style: none;
+}
+
+a:hover{
+  text-decoration: none;
+}
 
 
 .icon{
