--- a/src/components/issues/issue.css
+++ b/src/components/issues/issue.css
@@ -1,13 +1,24 @@
+.issue{
+  background-color: rgba(0, 0, 0, .3);
+}
+.center{
+  float: unset;
+  margin: 0 auto;
+  background-color: #475466;
+  height: 100%;
+}
 .issue-header{
   color: white;
   background-color: rgba(0, 0, 0, .6);
   height: 15%;
   justify-content: center;
   padding-top: 3%;
-  padding-left: 30px;
-  /* font-size: .8rem; */
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-weight: bold;
+}
+
+.header-items{
+  width: fit-content;
 }
 
 .span-issue{
@@ -15,8 +26,8 @@
 }
 
 .back-btn{
-  float: right;
-  margin-right: 50px;
+  font-size: 20px;
+  background-color: #FC5185;
 }
 
 /* Comment Card */
@@ -53,7 +64,8 @@
 
 .comment-section{
   overflow-y: auto;
-  height: 65vh;
+  height: 60vh;
+  width: 100%;
   background-color: black;
 }
 
