--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App{
   height: 100vh;
-  padding: 20px 20px;
-  background-color: #222831;
+  width: 100%;
+  padding: 3% 7%;
+  background-color: #cbced1;
+  overflow: hidden;
+}
+
+.row{
+  margin: 0px;
+  padding: 0px;
 }
