--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -1,19 +1,23 @@
 /* Main dashboard home */
-.dash-home{
-  background: #393E46;
+.dash-home {
+  background-color: white;
 }
-
 
 /* Dashboard Navigation area */
 
+
+
 .Navbar-Dash{
-  background-color: #475466;
-  color: #EEEEEE;
+  box-shadow: 4px 4px 4px 2px black;
+  font-size: 1.3rem;
+  color: gray;
+  height: 100%;
+  font-family: sans-serif;
 }
 
 .nav-buttons p{
   font-family: Georgia, 'Times New Roman', Times, serif;
-  font-weight: 700;
+  font-size: 1.3rem;
 }
 
 .header-dashboard{
@@ -39,18 +43,24 @@
 
 }
 
+.projects{
+  border-radius: 10px;
+  background-color: rgba(152, 187, 176, 0.2);
+  color: rgb(46, 44, 44);
+}
+
 .nav-buttons{
   display: flex;
   align-items: center;
-  padding: 10px 5px;
+  padding: 10px 10px;
   font-family: 'Times New Roman', Times, serif;
 }
 
 .nav-buttons:hover{
-  background-color: rgb(71, 165, 42);
+  background-color: white;
   border-bottom-left-radius: 9px;
   border-top-left-radius: 9px;
-  color: whitesmoke;
+  color: gray;
 }
 .span3{
   padding-right: 10px;
@@ -75,43 +85,37 @@
 /* Navigation Seach area */
 
 .search{
-  height: 15%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-left: 10px;
-  padding-right: 10px;
-  background-color: #1e2022;
+  height: 10%;
 }
 .search input{
-  height: 70%;
   border-radius: 5px;
   border: none;
+  background-color: rgba(47, 158, 125, .2);
+  height: 100%;
   padding-left: 10px;
+  font-size: 1rem;
   width: 100%;
-  color: white;
-  background-color: rgba(77, 72, 72, 0.4);
 }
 
 /* Dahbord Hero or Home section // main area */
 
 .header-home{
   height: 15%;
-  border-bottom: 1px solid rgb(180, 176, 176);
-  background-color: rgba(0, 0, 0, .5);
+  background: rgba(111, 143, 161, 0.9);
 }
 
 .custom-button{
   height: fit-content;
-  background-color: #FC5185;
-  color: black;
+  color: white;
+  border-radius: 20px;
+  border: 2px solid rgb(0, 255, 255);
 }
 
 .text{
   height: fit-content;
   font-size: 1.5rem;
   font-weight: bold;
-  color: #FC5185;
+  color: rgb(0, 255, 255);
   font-family: 'Times New Roman', Times, serif;
 }
 
@@ -134,15 +138,14 @@ a:hover{
 }
 
 .titles{
-  color: #FC5185;
-  font-weight: bold;
+  color: rgb(28, 28, 194);
+  font-size: .8rem;
 }
 
 /* Efficiency cards efficiciency-card.js */
 .efficiency-card{
   height: 100px;
   width: 100px;
-  display: flex;
 }
 
 .efficiency-card h3{
@@ -158,7 +161,7 @@ a:hover{
 .bug-title{
   font-weight: 800;
   font-size: .7rem;
-  color: #EEEEEE;
+  color: gray;
 }
 
 .none{
@@ -171,13 +174,16 @@ a:hover{
 
 .bugs{
   overflow-y: auto;
-  height: 60vh;
+  height: 70vh;
+  background-color: rgba(152, 187, 176, 0.2);
 }
 
 /* Bug card styling BugCard.js */
+
 .bug-card{
-  background-color: #222831;
-  color: white;
+  
+  background-color: #3e637c;
+  color: rgb(0, 255, 255);
 }
 
 .bug-name{
