st: color coded recent comment

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 100%;
   padding: 3% 7%;
-  background-color: #cbced1;
+  background-color: #f1f1f1;
   overflow: hidden;
 }
 
