--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,7 +2,7 @@
   color: gray;
   font-size: 1.3rem;
   border-right: 2px solid rgb(202, 202, 202);
-  box-shadow: 4px 4px 4px 5px gray;
+  box-shadow: 4px 4px 4px  gray;
 }
 
 a{
