st: profile page inital setup design

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,5 +1,6 @@
 .Navbar{
   color: gray;
+  background-color: white;
   font-size: 1.3rem;
   border-right: 2px solid rgb(202, 202, 202);
   box-shadow: 4px 4px 4px  gray;
